# SPDX-FileCopyrightText: 2026 The LineageOS Project
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tribble-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros"] }
regex = "1.11"
indexmap = { version = "2.14.0", features = ["serde"] }
cached = { version = "1.0.0", features = ["tokio", "serde", "async", "async_tokio_rt_multi_thread"] }
tower-http = { version = "0.6.11", features = ["fs"] }
asn-db2 = { git = "https://github.com/lineageos-infra/asn-db", rev = "e9bb2c5ffe95950ff3dca01c213626267f182ea2" }
axum-client-ip = "1.3.1"
arc-swap = "1.9.2"
flate2 = "1.1.9"
ureq = "3.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
